clean up OSHEntity tests
* checkstyle fixes
* improve readability
* comment out tests which don't test anything
* replace some guava usage with new jdk methods